--- a/src/scss/blog/_blog-nav-general.scss
+++ b/src/scss/blog/_blog-nav-general.scss
@@ -22,7 +22,12 @@
   font-size: 1.4rem;
   font-weight: 600;
   letter-spacing: .01em;
+  color: $read-more-color;
   background-color: $read-more-bg;
+  &:link,
+  &:visited {
+    color: $read-more-color;
+  }
   &:hover,
   &:focus {
     color: $read-more-hover;
